Beta    44
====
- updated scripting engine to Sleep 2.1-u2, over 50 logged improvements
  and feature changes.  If it doesn't break your script you are bound
  to like it.  Here are the compatability changes to watch out for:

  -- this release catches more syntax errors, beware this may affect you
  -- &indexOf now returns $null when no matches were found, check for
     this with the is operator i.e. if (indexOf($str, " ") is $null)
  -- &subarray was renamed to &sublist; &subarray still works just
     be aware that the docs will refer to &sublist

- replaced jIRCii Scripting PDF with a clean HTML version.  Thanks to
  Dan Fare for getting this started
- fixed a Sleep bug that was causing &parseSet to freak out in certain
  cases (this was causing the version reply not halting issue found in
  Slurge)
- added &getWindowSize("window name") to get the width of the specified
  window (in pixels)
- added &strwidth('some string') to get the width of the specified string
  (in pixels) using the current font metrics
- trying to connect with no server selected will now bring up a dialog
  asking user to select a server
- fixed Sleep bug with sublist used on read-only arrays (this was 
  breaking /names in some jIRCii scripts)
- reworked timer code to prevent concurrent modification exceptions
  caused by timers making timers or stopping timers during their
  execution
- jircii MDI mode now opens windows maximized if the last active window
  is maximized

[Note to Serge: you may want to recompile your addons]

Beta    43 release 9 May 08
====
- fixed alpha order of some aliases in the Help -> Commands menu
- jIRCii now creates the DCC receive directory if the directory
  does not exist.
- replaced call to skip with in Send.java with skipFully provided by
  nanaki at gmail.com using Find Bugs http://findbugs.sourceforge.net/
- implemented /kill <nick> <reason> command
- updated scripting engine to Sleep 2.1-b25.  